--- a/david-kalatzis/src/components/Footer/Footer.css
+++ b/david-kalatzis/src/components/Footer/Footer.css
@@ -1,4 +1,12 @@
 .footer {
   background-color: red;
+  position: fixed;
+  bottom: 0;
+  left: 0;
   width: 100%;
+  /* Optional styling */
+  background: #333;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
 }
