--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -1,8 +1,16 @@
 .top-bar {
+  position: relative;
+  width: 100%;
+  transition: all 0.3s ease;
+  z-index: 999;
+}
+
+.top-bar.is-sticky {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  background-color: #15161a;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
 }
 
 .top-bar-inner-container {
@@ -29,6 +37,34 @@
   background-color: #fff;
 }
 
+.top-bar-selector-group {
+  background-color: #15161a;
+  margin-top: 40px;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  width: 320px;
+}
+
+.top-bar-selector-button {
+  background-color: #15161a;
+  color: #a1a1a1;
+  font-weight: 800;
+  text-align: center;
+  flex: 1;
+  transition: color 0.3s, color 0.3s;
+  &:hover {
+    color: #fff;
+  }
+}
+
+.top-bar-selector-button.m--active {
+  background-color: #000;
+  color: #fff;
+  padding: 12px;
+}
+
 .top-bar-buttons-container {
   display: flex;
   gap: 16px;
@@ -43,7 +79,7 @@
   font-weight: 700;
   line-height: 24px;
   cursor: pointer;
-  transition: background-color 0.3s, color 0.3s;
+  transition: outline 0.3s, color 0.3s;
   &:hover {
     outline: 2px solid #fff;
   }
