--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -9,8 +9,6 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #15161a;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
 }
 
 .top-bar-inner-container {
@@ -18,6 +16,9 @@
   align-items: center;
   height: 140px;
   justify-content: space-between;
+}
+
+.top-bar-inner-container.is-sticky {
   padding: 0 15px;
   @media (min-width: 720px) {
     padding: 0 48px;
