--- a/david-kalatzis/src/components/AboutMe/AboutMe.css
+++ b/david-kalatzis/src/components/AboutMe/AboutMe.css
@@ -1,6 +1,6 @@
 .about-me {
   margin-top: 48px;
-  height: 300px;
+  height: 200px;
   width: 100%;
   display: flex;
   align-items: flex-start;
@@ -8,15 +8,16 @@
 }
 
 .about-me-picture {
-  width: 300px;
-  height: 100%;
+  width: 200px;
+  height: 200px;
   background-color: #15161a;
 }
 
 .about-me-info-container {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .about-me-name {
@@ -26,9 +27,16 @@
   text-transform: uppercase;
 }
 
+.about-me-description-container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
 .about-me-description {
-  font-size: 16px;
-  color: #a1a1a1;
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
 }
 
 .about-me-icons-containers {
