--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -54,6 +54,7 @@
   font-weight: 800;
   text-align: center;
   flex: 1;
+  padding: 12px;
   transition: color 0.3s, color 0.3s;
   &:hover {
     color: #fff;
