--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -48,8 +48,29 @@
   width: 320px;
 }
 
+.top-bar-selector-wrapper {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 48px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.top-bar-selector-indicator {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #000;
+  border-radius: 8px;
+  transition: transform 0.3s ease;
+  z-index: 0;
+}
+
 .top-bar-selector-button {
-  background-color: #15161a;
+  z-index: 1;
   color: #a1a1a1;
   font-weight: 800;
   text-align: center;
