--- a/david-kalatzis/src/index.css
+++ b/david-kalatzis/src/index.css
@@ -3,8 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: #fff;
-  background-color: #000;
+  color: #000;
+  background-color: #e6e6e6;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
