--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -39,6 +39,7 @@
 }
 
 .top-bar-selector-group {
+  border-radius: 24px;
   background-color: #15161a;
   margin-top: 40px;
   padding: 12px;
@@ -64,7 +65,7 @@
   width: 50%;
   height: 100%;
   background-color: #000;
-  border-radius: 8px;
+  border-radius: 24px;
   transition: transform 0.3s ease;
   z-index: 0;
 }
@@ -83,20 +84,17 @@
 }
 
 .top-bar-selector-button.m--active {
-  background-color: #000;
   color: #fff;
-  padding: 12px;
 }
 
 .top-bar-buttons-container {
   display: flex;
-  gap: 16px;
 }
 
 .top-bar-button {
+  text-align: center;
   background-color: #15161a;
   color: #fff;
-  outline: 2px solid #2a2c33;
   padding: 8px 16px;
   font-size: 16px;
   font-weight: 700;
@@ -104,6 +102,19 @@
   cursor: pointer;
   transition: outline 0.3s, color 0.3s;
   &:hover {
-    outline: 2px solid #fff;
+    background-color: #000;
   }
+}
+
+.top-bar-button-left {
+  border-radius: 24px 0 0 24px;
+  margin-right: -12px;
+  padding-right: 20px;
+  clip-path: polygon(0% 0%, 100% 0%, calc(100% - 15px) 100%, 0% 100%);
+}
+
+.top-bar-button-right {
+  border-radius: 0 24px 24px 0;
+  padding-left: 20px;
+  clip-path: polygon(calc(0% + 15px) 0%, 100% 0%, 100% 100%, 0% 100%);
 }
