--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -35,12 +35,12 @@
   margin-top: 32px;
   height: 64px;
   width: 64px;
-  background-color: #fff;
+  background-color: var(--white);
 }
 
 .top-bar-selector-group {
   border-radius: 24px;
-  background-color: #15161a;
+  background-color: var(--grey);
   margin-top: 40px;
   padding: 12px;
   display: flex;
@@ -64,7 +64,7 @@
   left: 0;
   width: 50%;
   height: 100%;
-  background-color: #000;
+  background-color: var(--black);
   border-radius: 24px;
   transition: transform 0.3s ease;
   z-index: 0;
@@ -79,12 +79,12 @@
   padding: 12px;
   transition: color 0.3s, color 0.3s;
   &:hover {
-    color: #fff;
+    color: var(--white);
   }
 }
 
 .top-bar-selector-button.m--active {
-  color: #fff;
+  color: var(--white);
 }
 
 .top-bar-buttons-container {
@@ -93,8 +93,8 @@
 
 .top-bar-button {
   text-align: center;
-  background-color: #15161a;
-  color: #fff;
+  background-color: var(--grey);
+  color: var(--white);
   padding: 8px 16px;
   font-size: 16px;
   font-weight: 700;
@@ -102,7 +102,7 @@
   cursor: pointer;
   transition: outline 0.3s, color 0.3s;
   &:hover {
-    background-color: #000;
+    background-color: var(--black);
   }
 }
 
