--- a/david-kalatzis/src/index.css
+++ b/david-kalatzis/src/index.css
@@ -1,15 +1,16 @@
 :root {
+  --black: #000;
+  --grey: #15161a;
+  --white: #fff;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: #000;
-  background-color: #e6e6e6;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #e6e6e6;
 }
 
 body {
