--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -92,9 +92,12 @@
 }
 
 .top-bar-button {
+  display: flex;
+  align-items: center;
   text-align: center;
   background-color: var(--grey);
   color: var(--white);
+  gap: 8px;
   padding: 8px 16px;
   font-size: 16px;
   font-weight: 700;
@@ -117,4 +120,10 @@
   border-radius: 0 24px 24px 0;
   padding-left: 20px;
   clip-path: polygon(calc(0% + 15px) 0%, 100% 0%, 100% 100%, 0% 100%);
+}
+
+.top-bar-button-icon {
+  fill: var(--white);
+  width: 24px;
+  height: 24px;
 }
