--- a/david-kalatzis/src/index.css
+++ b/david-kalatzis/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --black: #000;
+  --black: #15161a;
   --grey: #15161a;
   --white: #fff;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
