--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -40,13 +40,14 @@
 
 .top-bar-selector-group {
   border-radius: 24px;
-  background-color: var(--grey);
+  background-color: var(--white);
   margin-top: 40px;
   padding: 12px;
   display: flex;
   align-items: center;
   gap: 16px;
   width: 320px;
+  filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.15));
 }
 
 .top-bar-selector-wrapper {
@@ -64,7 +65,7 @@
   left: 0;
   width: 50%;
   height: 100%;
-  background-color: var(--black);
+  background-color: var(--grey);
   border-radius: 24px;
   transition: transform 0.3s ease;
   z-index: 0;
@@ -79,7 +80,7 @@
   padding: 12px;
   transition: color 0.3s, color 0.3s;
   &:hover {
-    color: var(--white);
+    color: var(--black);
   }
 }
 
@@ -91,12 +92,18 @@
   display: flex;
 }
 
+.top-bar-button-shadow {
+  filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.15));
+}
+
 .top-bar-button {
   display: flex;
   align-items: center;
   text-align: center;
-  background-color: var(--grey);
-  color: var(--white);
+  text-decoration: none;
+  background-color: var(--white);
+  color: var(--black);
+
   gap: 8px;
   padding: 8px 16px;
   font-size: 16px;
@@ -105,7 +112,7 @@
   cursor: pointer;
   transition: outline 0.3s, color 0.3s;
   &:hover {
-    background-color: var(--black);
+    text-decoration: underline;
   }
 }
 
@@ -123,7 +130,7 @@
 }
 
 .top-bar-button-icon {
-  fill: var(--white);
+  fill: var(--black);
   width: 24px;
   height: 24px;
 }
