--- a/david-kalatzis/src/components/AboutMe/AboutMe.css
+++ b/david-kalatzis/src/components/AboutMe/AboutMe.css
@@ -12,6 +12,7 @@
   height: 200px;
   background-color: var(--white);
   flex-shrink: 0;
+  filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.15));
 }
 
 .about-me-info-container {
