--- a/david-kalatzis/src/components/AboutMe/AboutMe.css
+++ b/david-kalatzis/src/components/AboutMe/AboutMe.css
@@ -12,7 +12,7 @@
   height: 200px;
   background-color: var(--white);
   flex-shrink: 0;
-  filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.15));
+  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.3));
 }
 
 .about-me-info-container {
@@ -59,6 +59,10 @@
   &:hover {
     -webkit-animation: wobble-ver-left 0.65s both;
     animation: wobble-ver-left 0.65s both;
+  }
+  &:hover .footer-up-icon {
+    -webkit-animation: pulsate-bck 0.5s ease-in-out infinite both;
+    animation: pulsate-bck 0.5s ease-in-out infinite both;
   }
 }
 
