--- a/david-kalatzis/src/components/AboutMe/AboutMe.css
+++ b/david-kalatzis/src/components/AboutMe/AboutMe.css
@@ -10,9 +10,10 @@
 .about-me-picture {
   width: 200px;
   height: 200px;
+  border-radius: 16px;
   background-color: var(--white);
   flex-shrink: 0;
-  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.4));
 }
 
 .about-me-info-container {
