--- a/david-kalatzis/src/index.css
+++ b/david-kalatzis/src/index.css
@@ -23,3 +23,13 @@ button {
   display: inline-block;
   cursor: pointer;
 }
+
+body {
+  overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
