--- a/david-kalatzis/src/App.css
+++ b/david-kalatzis/src/App.css
@@ -15,6 +15,10 @@
   }
 }
 
-.temp {
+.content-container {
   height: 1800px;
+  border-top: 2px solid var(--light-grey);
+  border-bottom: 2px solid var(--light-grey);
+  margin-top: 20px;
+  margin-bottom: 120px;
 }
