--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -31,11 +31,35 @@
   }
 }
 
-.top-bar-icon {
-  margin-top: 32px;
-  height: 64px;
-  width: 64px;
-  background-color: var(--white);
+.top-bar-home-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 40px;
+  height: 40px;
+  width: 40px;
+  border-radius: 18px;
+  background-color: var(--light-grey);
+  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  &:hover {
+    background-color: var(--white);
+    box-shadow: none;
+    filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.15));
+  }
+  &:hover .top-bar-home-icon {
+    color: var(--black);
+    opacity: 1;
+  }
+}
+
+.top-bar-home-icon {
+  transition: color 0.3s ease;
+  height: 24px;
+  width: 24px;
+  color: var(--white);
+  opacity: 0.5;
 }
 
 .top-bar-selector-group {
