--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -1,4 +1,5 @@
 .top-bar {
+  margin-top: 32px;
   position: relative;
   width: 100%;
   transition: all 0.3s ease;
@@ -13,8 +14,8 @@
 
 .top-bar-inner-container {
   display: flex;
-  align-items: center;
-  height: 140px;
+  align-items: flex-start;
+  height: auto;
   justify-content: space-between;
 }
 
@@ -35,7 +36,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 40px;
   height: 40px;
   width: 40px;
   border-radius: 18px;
@@ -65,7 +65,6 @@
 .top-bar-selector-group {
   border-radius: 24px;
   background-color: var(--white);
-  margin-top: 40px;
   padding: 12px;
   display: flex;
   align-items: center;
