--- a/david-kalatzis/src/App.css
+++ b/david-kalatzis/src/App.css
@@ -3,6 +3,7 @@
   box-sizing: content-box;
   margin-left: auto;
   margin-right: auto;
+  max-width: 1648px;
   padding: 0 15px;
   @media (min-width: 720px) {
     padding: 0 48px;
