--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -25,7 +25,7 @@
 
 .top-bar-inner-container {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   height: auto;
   justify-content: space-between;
 }
@@ -76,7 +76,7 @@
 .top-bar-selector-group {
   border-radius: 24px;
   background-color: var(--white);
-  padding: 12px;
+  padding: 10px;
   display: flex;
   align-items: center;
   gap: 16px;
@@ -88,7 +88,7 @@
   position: relative;
   display: flex;
   width: 100%;
-  height: 48px;
+  height: 40px;
   border-radius: 8px;
   overflow: hidden;
 }
@@ -111,7 +111,6 @@
   font-weight: 800;
   text-align: center;
   flex: 1;
-  padding: 12px;
   transition: color 0.3s, color 0.3s;
   &:hover {
     color: var(--black);
