--- a/david-kalatzis/src/App.css
+++ b/david-kalatzis/src/App.css
@@ -15,3 +15,12 @@
     padding: 0 112px;
   }
 }
+
+.content-container {
+  border-top: 2px solid #d3d3d3;
+  border-bottom: 2px solid #d3d3d3;
+  padding: 32px 0px;
+  margin-top: 32px;
+  margin-bottom: 120px;
+  column-count: 3;
+}
