--- a/david-kalatzis/src/components/Content/Content.css
+++ b/david-kalatzis/src/components/Content/Content.css
@@ -1,13 +1,5 @@
-.content-container {
-  border-top: 2px solid #d3d3d3;
-  border-bottom: 2px solid #d3d3d3;
-  padding: 32px 0px;
-  margin-top: 32px;
-  margin-bottom: 120px;
-  column-count: 3;
-}
-
 .content-item {
+  position: relative;
   width: 100%;
   margin-bottom: 1em;
   border-radius: 16px;
@@ -29,4 +21,43 @@
   height: auto;
   transition: transform 0.3s ease;
   display: block;
+}
+
+.content-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-content: flex-start;
+  flex: 1;
+  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  bottom: 0;
+  height: 164px;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 14%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  padding: 0 20px 8px 20px;
+  font-size: 16px;
+  font-weight: 800;
+}
+
+.content-info-inner {
+  margin-top: auto;
+  width: 100%;
+}
+
+.content-info-details {
+  padding-top: 8px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  align-content: flex-start;
+  justify-content: space-between;
+  width: 100%;
+  font-size: 14px;
+  font-weight: 700;
 }
