--- a/david-kalatzis/src/components/Content/Content.css
+++ b/david-kalatzis/src/components/Content/Content.css
@@ -7,6 +7,8 @@
   filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.3));
   cursor: pointer;
   transition: 0.3s ease;
+  opacity: 0;
+  transform: translateY(20px);
   &:hover {
     transform: scale(1.02);
     filter: drop-shadow(5px 10px 10px rgba(0, 0, 0, 0.6));
@@ -14,6 +16,11 @@
   &:hover .content-image {
     transform: scale(1.075);
   }
+}
+
+.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .content-image {
