--- a/david-kalatzis/src/components/Content/Content.css
+++ b/david-kalatzis/src/components/Content/Content.css
@@ -16,6 +16,12 @@
   &:hover .content-image {
     transform: scale(1.075);
   }
+  &:hover .content-info {
+    padding-bottom: 12px;
+  }
+  &:hover .content-learn-more {
+    opacity: 1;
+  }
 }
 
 .visible {
@@ -47,7 +53,10 @@
     rgba(0, 0, 0, 1) 14%,
     rgba(255, 255, 255, 0) 100%
   );
-  padding: 0 20px 8px 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  transition: 0.15s ease;
+  padding-bottom: 8px;
   font-size: 16px;
   font-weight: 800;
 }
@@ -67,4 +76,30 @@
   width: 100%;
   font-size: 14px;
   font-weight: 700;
+}
+
+.content-learn-more {
+  flex: 1;
+  opacity: 0;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 16px;
+  font-weight: 1000;
+  transition: 0.3s ease;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px 0;
+  width: 50%;
+  margin: auto;
+  border-radius: 8px;
+}
+
+.content-learn-more-icon {
+  transition: color 0.3s ease;
+  height: 24px;
+  width: 24px;
+  padding-top: 8px;
+  color: var(--white);
 }
