--- a/david-kalatzis/src/components/About/About.css
+++ b/david-kalatzis/src/components/About/About.css
@@ -15,7 +15,6 @@
   gap: 12px;
   padding: 12px;
   box-sizing: border-box;
-  background-color: rgb(203, 203, 203);
 }
 
 .about-me-top {
@@ -23,12 +22,14 @@
   flex-direction: row;
   height: 20%;
   gap: 8px;
+  box-sizing: border-box;
 }
 
 .about-me-bottom {
   display: flex;
   flex-direction: row;
   height: 80%;
+  box-sizing: border-box;
   gap: 8px;
 }
 
@@ -53,7 +54,7 @@
   background-color: #fff;
   border-radius: 12px;
   padding: 12px;
-  width: 30%;
+  width: 70%;
 }
 
 .about-me-tools {
@@ -61,7 +62,14 @@
   background-color: #fff;
   border-radius: 12px;
   padding: 12px;
-  width: 70%;
+  width: 30%;
+}
+
+.about-me-title-group {
+  display: flex;
+  flex-direction: row;
+  gap: 6px;
+  padding-bottom: 10px;
 }
 
 .about-me-title {
@@ -69,11 +77,28 @@
   font-weight: 700;
   line-height: 24px;
   width: 100%;
-  padding-bottom: 10px;
+}
+
+.about-me-list {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.about-me-list-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .about-me-description {
-  font-size: 14px;
-  font-weight: 700;
+  font-size: 16px;
+  font-weight: 600;
   line-height: 24px;
+}
+
+.about-me-icon {
+  height: 24px;
+  width: 24px;
+  color: var(--white);
 }
