--- a/david-kalatzis/src/App.css
+++ b/david-kalatzis/src/App.css
@@ -24,3 +24,13 @@
   margin-bottom: 120px;
   column-count: 3;
 }
+
+.fade-in {
+  opacity: 1;
+  transition: opacity 0.4s ease-in;
+}
+
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.4s ease-out;
+}
