--- a/david-kalatzis/src/components/Hero/Hero.css
+++ b/david-kalatzis/src/components/Hero/Hero.css
@@ -6,6 +6,7 @@
   align-items: flex-start;
   gap: 32px;
   flex-direction: column;
+  align-items: stretch;
   @media (min-width: 720px) {
     flex-direction: row;
   }
@@ -31,7 +32,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
 }
 
 .hero-name {
