--- a/david-kalatzis/src/components/ContentDetails/ContentDetails.css
+++ b/david-kalatzis/src/components/ContentDetails/ContentDetails.css
@@ -1,5 +1,56 @@
 .content-details {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  gap: 42px;
   font-size: 18px;
   font-weight: 700;
+  color: var(--white);
+  border-top: 2px solid #d3d3d3;
+  border-bottom: 2px solid #d3d3d3;
+  padding: 32px 0px;
+  margin-top: 32px;
+  margin-bottom: 120px;
+}
+
+.content-details-main-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   color: var(--black);
+}
+
+.content-details-main-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.content-details-main-company {
+  font-size: 32px;
+  font-weight: 900;
+}
+
+.content-details-main-title {
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.content-details-main-date {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.content-details-section {
+  box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
+    0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
+    0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
+  box-sizing: border-box;
+  background: linear-gradient(
+    124deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 14%,
+    rgba(31, 31, 31, 1) 100%
+  );
+  border-radius: 12px;
+  padding: 24px;
 }
