--- a/david-kalatzis/src/components/ContentDetails/ContentDetails.css
+++ b/david-kalatzis/src/components/ContentDetails/ContentDetails.css
@@ -87,3 +87,18 @@
     0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
     0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
 }
+
+.content-details-section-video {
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+  border-radius: 12px;
+  width: 100%;
+}
+
+.content-details-video {
+  border: 0;
+  border-radius: 12px;
+  width: 100%;
+  height: auto;
+}
