--- a/david-kalatzis/src/components/ContentDetails/ContentDetails.css
+++ b/david-kalatzis/src/components/ContentDetails/ContentDetails.css
@@ -1,8 +1,4 @@
 .content-details {
-  display: flex;
-  flex-direction: column;
-  box-sizing: border-box;
-  gap: 42px;
   font-size: 18px;
   font-weight: 700;
   color: var(--white);
@@ -40,6 +36,13 @@
 .content-details-main-date {
   font-size: 16px;
   font-weight: 700;
+}
+
+.content-details-sections {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  gap: 42px;
 }
 
 .content-details-title {
