--- a/david-kalatzis/src/components/Footer/Footer.css
+++ b/david-kalatzis/src/components/Footer/Footer.css
@@ -14,6 +14,7 @@
   justify-content: space-between;
   width: 100%;
   padding: 0 15px;
+  gap: 16px;
   @media (min-width: 720px) {
     padding: 0 48px;
   }
