--- a/david-kalatzis/src/components/Hero/Hero.css
+++ b/david-kalatzis/src/components/Hero/Hero.css
@@ -4,7 +4,7 @@
   width: 100%;
   display: flex;
   align-items: flex-start;
-  gap: 16px;
+  gap: 32px;
   flex-direction: column;
   align-items: stretch;
   @media (min-width: 720px) {
@@ -21,17 +21,39 @@
   background-color: var(--white);
   flex-shrink: 0;
   filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.4));
-  max-width: 150px;
-  max-height: 150px;
+  width: 175px;
+  height: 175px;
   @media (min-width: 720px) {
-    max-width: 200px;
-    max-height: 200px;
+    width: 200px;
+    height: 200px;
   }
+}
+
+.hero-picture-container {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  justify-content: center;
+  @media (min-width: 720px) {
+    justify-content: flex-start;
+  }
+}
+
+.hero-name-container {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .hero-info-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+}
+
+.hero-name-container {
+  display: flex;
+  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -42,6 +64,7 @@
   -webkit-animation: text-focus-in 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53)
     both;
   animation: text-focus-in 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+  padding-bottom: 18px;
   font-size: 24px;
   @media (min-width: 720px) {
     font-size: 32px;
@@ -54,7 +77,7 @@
 .hero-description-container {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 16px;
   max-width: 800px;
 }
 
@@ -95,6 +118,55 @@
   transform-origin: center center;
   fill: var(--grey);
   transition: transform 0.3s, fill 0.3s;
+}
+
+.hero-selector-button.m--active {
+  color: var(--white);
+  cursor: default;
+}
+
+.hero-buttons-container {
+  display: flex;
+}
+
+.hero-button-shadow {
+  filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.15));
+}
+
+.hero-button {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-decoration: none;
+  background-color: var(--white);
+  color: var(--black);
+
+  gap: 8px;
+  padding: 4px 12px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  cursor: pointer;
+  transition: outline 0.3s, color 0.3s;
+}
+
+.hero-button-left {
+  border-radius: 24px 0 0 24px;
+  margin-right: -12px;
+  padding-right: 20px;
+  clip-path: polygon(0% 0%, 100% 0%, calc(100% - 15px) 100%, 0% 100%);
+}
+
+.hero-button-right {
+  border-radius: 0 24px 24px 0;
+  padding-left: 20px;
+  clip-path: polygon(calc(0% + 15px) 0%, 100% 0%, 100% 100%, 0% 100%);
+}
+
+.hero-button-icon {
+  fill: var(--black);
+  width: 24px;
+  height: 24px;
 }
 
 @-webkit-keyframes text-focus-in {
