--- a/david-kalatzis/src/components/Hero/Hero.css
+++ b/david-kalatzis/src/components/Hero/Hero.css
@@ -66,11 +66,13 @@
   animation: text-focus-in 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
   padding-bottom: 18px;
   font-size: 24px;
+  line-height: 24px;
   @media (min-width: 720px) {
     font-size: 32px;
   }
   @media (min-width: 1080px) {
     font-size: 42px;
+    line-height: 36px;
   }
 }
 
