--- a/david-kalatzis/src/components/Content/Content.css
+++ b/david-kalatzis/src/components/Content/Content.css
@@ -54,8 +54,11 @@
   padding-right: 20px;
   transition: 0.15s ease;
   padding-bottom: 8px;
-  font-size: 16px;
   font-weight: 800;
+  font-size: 14px;
+  @media (min-width: 720px) {
+    font-size: 16px;
+  }
 }
 
 .content-info-inner {
@@ -71,8 +74,11 @@
   align-content: flex-start;
   justify-content: space-between;
   width: 100%;
-  font-size: 14px;
   font-weight: 700;
+  font-size: 12px;
+  @media (min-width: 720px) {
+    font-size: 14px;
+  }
 }
 
 .content-learn-more {
