--- a/david-kalatzis/src/components/About/About.css
+++ b/david-kalatzis/src/components/About/About.css
@@ -29,18 +29,24 @@
 
 .about-me-top {
   display: flex;
-  flex-direction: row;
   height: 20%;
   gap: 8px;
   box-sizing: border-box;
+  flex-direction: column;
+  @media (min-width: 720px) {
+    flex-direction: row;
+  }
 }
 
 .about-me-bottom {
   display: flex;
-  flex-direction: row;
   height: 80%;
   box-sizing: border-box;
   gap: 8px;
+  flex-direction: column;
+  @media (min-width: 720px) {
+    flex-direction: row;
+  }
 }
 
 .about-me-part {
@@ -59,19 +65,31 @@
 }
 
 .about-me-based-in {
-  width: 30%;
+  width: 100%;
+  @media (min-width: 720px) {
+    width: 30%;
+  }
 }
 
 .about-me-education {
-  width: 70%;
+  width: 100%;
+  @media (min-width: 720px) {
+    width: 70%;
+  }
 }
 
 .about-me-work {
-  width: 80%;
+  width: 100%;
+  @media (min-width: 720px) {
+    width: 80%;
+  }
 }
 
 .about-me-tools {
-  width: 20%;
+  width: 100%;
+  @media (min-width: 720px) {
+    width: 20%;
+  }
 }
 
 .about-me-title-group {
