--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -123,7 +123,7 @@
 
 .top-bar-selector-button.m--active {
   color: var(--white);
-  /* border-bottom: 4px solid #000; */
+  pointer-events: none;
   cursor: default;
 }
 
