--- a/david-kalatzis/src/components/About/About.css
+++ b/david-kalatzis/src/components/About/About.css
@@ -1,6 +1,6 @@
 .about-me {
-  border-top: 2px solid #d3d3d3;
-  border-bottom: 2px solid #d3d3d3;
+  border-top: 4px solid #000;
+  border-bottom: 4px solid #000;
   padding: 32px 0px;
   margin-top: 32px;
   margin-bottom: 120px;
