--- a/david-kalatzis/src/components/ContentPersonal/ContentPersonal.css
+++ b/david-kalatzis/src/components/ContentPersonal/ContentPersonal.css
@@ -1,3 +1,10 @@
+.content-personal {
+  column-count: 2;
+  @media (min-width: 1080px) {
+    column-count: 3;
+  }
+}
+
 .content-item {
   position: relative;
   width: 100%;
