--- a/david-kalatzis/src/components/Footer/Footer.css
+++ b/david-kalatzis/src/components/Footer/Footer.css
@@ -49,9 +49,26 @@
   font-weight: 700;
   line-height: 24px;
 }
+.footer-info-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
 
 .footer-up-nav-container {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 4px;
+}
+
+.footer-picture {
+  width: 48px;
+  height: 48px;
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
 }
 
 .footer-up-nav {
