--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -72,7 +72,7 @@
 }
 
 .top-bar-selector-group {
-  border-radius: 24px;
+  border-radius: top-bar-button-icon24px;
   background-color: var(--white);
   padding: 10px;
   display: flex;
@@ -152,7 +152,7 @@
   }
 }
 .top-bar-button:hover .top-bar-button-icon {
-  fill: #00b4b4;
+  fill: #e4007c;
 }
 
 .top-bar-button-left {
