--- a/david-kalatzis/src/components/ContentDetails/ContentDetails.css
+++ b/david-kalatzis/src/components/ContentDetails/ContentDetails.css
@@ -29,7 +29,8 @@
   background-color: white;
   border-radius: 16px;
   &:hover .content-details-link-icon {
-    fill: var(--black);
+    width: 20px;
+    height: 20px;
   }
 }
 
@@ -37,7 +38,7 @@
   fill: #e4007c;
   width: 18px;
   height: 18px;
-  transition: fill 0.3s;
+  transition: width 0.3s, height 0.3s;
 }
 
 .content-details-main-company {
