--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -72,7 +72,7 @@
 }
 
 .top-bar-selector-group {
-  border-radius: top-bar-button-icon24px;
+  border-radius: 24px;
   background-color: var(--white);
   padding: 10px;
   display: flex;
