--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -48,26 +48,24 @@
   height: 40px;
   width: 40px;
   border-radius: 18px;
-  background-color: var(--light-grey);
-  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.3);
+  background-color: var(--white);
   cursor: pointer;
   transition: background-color 0.3s ease;
+  filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.15));
   &:hover {
-    background-color: var(--white);
     box-shadow: none;
-    filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.15));
   }
-  /* &:hover .top-bar-home-icon {
+  &:hover .top-bar-home-icon {
     color: var(--black);
     opacity: 1;
-  } */
+  }
 }
 
 .top-bar-home-icon {
   transition: color 0.3s ease;
   height: 24px;
   width: 24px;
-  color: var(--white);
+  color: var(--light-grey);
   opacity: 0.5;
 }
 
