--- a/david-kalatzis/src/components/TopBar/TopBar.css
+++ b/david-kalatzis/src/components/TopBar/TopBar.css
@@ -50,22 +50,18 @@
   border-radius: 18px;
   background-color: var(--white);
   cursor: pointer;
-  transition: background-color 0.3s ease;
   filter: drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.15));
-  &:hover {
-    box-shadow: none;
-  }
   &:hover .top-bar-home-icon {
-    color: var(--black);
+    color: #e4007c;
     opacity: 1;
   }
 }
 
 .top-bar-home-icon {
-  transition: color 0.3s ease;
+  transition: color 0.1s;
   height: 24px;
   width: 24px;
-  color: var(--light-grey);
+  color: var(--black);
   opacity: 0.5;
 }
 
