--- a/david-kalatzis/src/components/ContentDetails/ContentDetails.css
+++ b/david-kalatzis/src/components/ContentDetails/ContentDetails.css
@@ -42,14 +42,21 @@
 }
 
 .content-details-main-company {
-  font-size: 32px;
-  line-height: 32px;
+  font-size: 22px;
+  line-height: 22px;
   font-weight: 900;
+  @media (min-width: 720px) {
+    font-size: 28px;
+    line-height: 28px;
+  }
 }
 
 .content-details-main-title {
   font-size: 22px;
   font-weight: 700;
+  @media (min-width: 720px) {
+    font-size: 18px;
+  }
 }
 
 .content-details-main-date {
@@ -74,9 +81,12 @@
 }
 
 .content-details-description {
-  font-size: 16px;
   font-weight: 600;
   line-height: 24px;
+  font-size: 14px;
+  @media (min-width: 1080px) {
+    font-size: 16px;
+  }
 }
 
 .content-details-section-text {
